[tool.poetry]
name = "osuplaylist"
version = "3.0.0"
description = "Export audio from osu to directory/to ingame collection/to steam music  or create m3u8 playlist"
authors = ["upgradeq <noreply@example.com>"]
readme = "README.md"
include = ["bg.png","export.jpg","LICENCE.md"]
license = "WTFPL"


homepage = "https://github.com/upgradeQ/osuplaylist"
repository = "https://github.com/upgradeQ/osuplaylist"
documentation = "https://github.com/upgradeQ/osuplaylist/blob/master/README.md"

keywords = ["osu","steam","export","playlist","database"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
osuplaylist = "osuplaylist:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
